2003-11-16  Shaun McCance  <shaunm@gnome.org>

	* src/yelp-db-pager.c:
	- Make the titles for sidebars actually work.  That was stupid.

	* src/yelp-window.c:
	- Make the titles for sidebars actually work.
	- Keep a reference to the scrolling areas, so I can reparent.

2003-11-16  Shaun McCance  <shaunm@gnome.org>

	* src/Makefile.am:
	* src/yelp-base.c:
	* src/yelp-toc-pager.c:
	* src/yelp-toc-pager.h:
	- Adding YelpTocPager

	* src/yelp-db-pager.c:
	* src/yelp-db-pager.h:
	- Whitespace changes

2003-11-15  Shaun McCance  <shaunm@gnome.org>

	* src/yelp-db-pager.c:
	* src/yelp-pager.c:
	* src/yelp-pager.h:
	- Change resolve_uri to return a non-const gchar *
	- Remove sections event, as it's not necessary using the
	  GtkTreeModel without all that threading crap.

	* src/yelp-db-pager.c:
	- Remove sections event.

2003-11-15  Shaun McCance  <shaunm@gnome.org>

	* src/yelp-db-pager.c:
	* src/yelp-pager.c:
	* src/yelp-pager.h:
	- Use a YelpPage struct rather than just a gchar, so a page can
	  hold the id and title and well as the contents.

	* src/yelp-error.h:
	- Add an error code for no-longer-supported SGML.

	* src/yelp-window.c:
	- Prepare to work TOC back in.
	- Use YelpPage.
	- Some more error-handling.
	- Make "Loading..." actually work.
	- Set window title.

2003-11-15  Shaun McCance  <shaunm@gnome.org>

	* src/Makefile.am:
	* src/yelp-cache.c:
	* src/yelp-cache.h:
	* src/yelp-html-gtkhtml2.c:
	* src/yelp-info.c:
	* src/yelp-main.c:
	* src/yelp-main.c:
	* src/yelp-scrollkeeper.c:
	* src/yelp-section.c:
	* src/yelp-window.c:
	- Changes for GObjectified YelpURI
	- Using new transformation code

	* src/yelp-db-pager.c:
	* src/yelp-pager.c:
	* src/yelp-pager.h:
	- Dethreadifying

	* src/yelp-uri.c:
	* src/yelp-uri.h:
	- Work on relative URI resolver

2003-11-11  Shaun McCance  <shaunm@gnome.org>

	* src/Makefile.am:
	* src/yelp-base.c:
	* src/yelp-history.c:
	* src/yelp-window.c:
	* src/yelp-window.h:
	- Breaking things more for the new transformations
