@@ -1,3 +1,8 @@
+2003-11-17  Shaun McCance  <shaunm@gnome.org>
+
+	* src/yelp-toc-pager.c:
+	- More work on the TOC pager.
+
 2003-11-16  Shaun McCance  <shaunm@gnome.org>
 
 	* src/yelp-db-pager.c:
